--- a/index.html
+++ b/index.html
@@ -4,22 +4,26 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Mon  profil </title>
-	<meta name="description"content="Voici ma page de profil perso eheh">
+	<meta name="description"content="Voici ma page de profil personnel">
 	<script src="https://kit.fontawesome.com/27e17c3ced.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
+<video autoplay loop id="bgvid" >
+	<source src="images/pexel.mp4" type="video/mp4"> 
+</video>
+
 <div>
 	<h1>Salut salut, c'est Tom 🦍</h1>
 	<img src="images/megatchad.jpg"alt=""width="150">
 	<p>
 		J'adore les vieux films classiques type Spielberg, Fincher ou Kubrick, j'aime bien le théâtre aussi, j'ai fait toute mon enfance avec les mangas et le rap français et j'ai gardé ces centres d'intérêts en grandissant :)
 	</p>
-	<a href="https://www.rothschildandco.com/fr/" class="button-blue"target="_blank"
+	<a href="http://eelslap.com" class="button-blue"target="_blank"
 
 	style="text-decoration:none"> Découvre mon site </a>
 </div>
-
 
 <div>
    <h2>Mon petit parcours 👨🏻‍🎓</h2>
@@ -28,11 +32,11 @@
 
 <div>
     <h2> Et le sport ? 🏋🏼‍♂️</h2>
-    <p>J'ai fait pas mal de sport : judo, natation, tennis, course à pied,.. Mais principalement, j'ai fait 10 ans de football et je fais actuellement de la boxe thaïlandaise ish ish</p>
+    <p>J'ai fait pas mal de sport : judo, natation, tennis, course à pied,.. Mais principalement, j'ai fait 10 ans de football et je fais actuellement de la boxe thaïlandaise.</p>
  </div>
 
 <div>
-<h2>Rejoins moi sur mes réseaux sociaux mec 👨🏻‍💻</h2>
+<h2>Rejoins moi sur mes réseaux sociaux 👨🏻‍💻</h2>
 <ul id="list-inline">
 	<li>
 		<a href="https://www.facebook.com/tom.guyout/"target="_blank"><i class="fab fa-facebook-square"></i></a>
